Fix: title/artist in player bar is shown now
Width was too big

--- a/www/css/streamr_phone.css
+++ b/www/css/streamr_phone.css
@@ -243,7 +243,6 @@ div.player_bar > div.player-bar-image-area > img {
 div.player_bar > div.player-bar-info {
   display: inline-block;
   padding-left: 3%;
-  width: 85%;
   height: 100%;
 }
 
